unpackaged/main/default/objects/sortablegrid__sdg_Preferences__c/sortablegrid__sdg_Preferences__c.object-meta.xml
<CustomObject>
    <label>Sortable Data Grid Preference</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sortable Data Grid Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sortable Data Grid Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>