unpackaged/main/default/objects/sortablegrid__sdg_Preferences__c/fields/sortablegrid__Filters__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__Filters__c</fullName>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>