unpackaged/main/default/objects/sortablegrid__sdg_Preferences__c/fields/sortablegrid__sdgKey__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__sdgKey__c</fullName>
    <label>sdgKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>