unpackaged/main/default/objects/sortablegrid__sdg_Preferences__c/fields/sortablegrid__User__c.field-meta.xml
<CustomField>
    <fullName>sortablegrid__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sortable_Data_Grid_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>